removed scrollbar from chat + clear screen fixed

--- a/WS_Drawing_Game_Frontend/index.css
+++ b/WS_Drawing_Game_Frontend/index.css
@@ -94,6 +94,12 @@ body{
     display: flex;
     flex-direction: column;
     box-shadow: 0 0 3px 3px black;
+    scrollbar-width: none; 
+    -ms-overflow-style: none; 
+}
+
+.chat::-webkit-scrollbar {
+    display: none;
 }
 
 .message {
